@@ -1,4 +1,5 @@
 
+  * Added support for trueaudio files
   * Added support for wavpack files
   * Added option to embed album cover to all album tracks
   * Playlist panel now allow to select multiple playlists
